--- a/templates/about.html
+++ b/templates/about.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Nioscent : About</title>
 </head>
+
 <body>
+    {% extends "layout.html" %}
+    {% block content %}
     <h1>About.html</h1>
+    {% endblock %}
 </body>
+
 </html>
