--- a/templates/layout.html
+++ b/templates/layout.html
@@ -13,14 +13,14 @@
 
 <body>
     <nav class="navbar navbar-expand-lg  navbar-light bg-light">
-        <a class="navbar-brand" href="/">Nioscent Technologies </a>
+        <a class="navbar-brand" href="/"><img src="{{ url_for('static', filename='img/logo.png') }}" alt="Nioscent Technologies" class="logo"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav mr-auto ">
+            <ul class="navbar-nav ml-auto ">
                 <li class="nav-item">
                     <a class="nav-link" href="/">Home <span class="sr-only"></span></a>
                 </li>
