--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,18 +1,20 @@
 @import url('https://fonts.googleapis.com/css?family=Sarabun|Source+Sans+Pro');
 
-body{
-    background: rgb(245, 243, 218);
-}
 
+body{
+    background-image: url(../img/back_image.png);
+    background-repeat: repeat;
+}
 .logo{
     width: 65%;
     margin: -1px;
 }
 .container{
-    padding-top: 15px;
+    padding-top: 2.5%;
 }
-embed{
-    width: 100%;
-    margin: auto;
+.card-title{
+    font-family: 'Sarabun', sans-serif;
 }
-
+.card-text, .navbar-nav{
+    font-family: 'Source Sans Pro', sans-serif;
+}
