--- a/templates/layout.html
+++ b/templates/layout.html
@@ -12,8 +12,10 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg  navbar-light bg-light">
-        <a class="navbar-brand" href="/"><img src="{{ url_for('static', filename='img/logo.png') }}" alt="Nioscent Technologies" class="logo"></a>
+
+    <nav class="navbar navbar-expand-lg  navbar-light bg-white">
+        <a class="navbar-brand" href="/"><img src="{{ url_for('static', filename='img/logo_.png') }}"
+                alt="Nioscent Technologies" class="logo"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -21,23 +23,27 @@
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ml-auto ">
-                <li class="nav-item">
+                <li class="nav-item lead">
                     <a class="nav-link" href="/">Home <span class="sr-only"></span></a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item lead">
                     <a class="nav-link" href="{{ url_for('about') }}">About Us <span class="sr-only"></span></a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item lead">
                     <a class="nav-link" href="{{ url_for('contact') }}">Contact <span class="sr-only"></span></a>
                 </li>
             </ul>
         </div>
     </nav>
 
-<!---->
-    {% block content %}
-    {% endblock %}
-<!---->
+
+
+    <!---->
+    <div class="container">
+        {% block content %}
+        {% endblock %}
+    </div>
+    <!---->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
