--- a/templates/layout.html
+++ b/templates/layout.html
@@ -13,7 +13,7 @@
 
 <body>
 
-    <nav class="navbar navbar-expand-lg  navbar-light bg-white">
+    <nav class="navbar sticky-top navbar-expand-lg  navbar-light bg-white">
         <a class="navbar-brand" href="/"><img src="{{ url_for('static', filename='img/logo_.png') }}"
                 alt="Nioscent Technologies" class="logo"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
@@ -44,6 +44,9 @@
         {% endblock %}
     </div>
     <!---->
+
+    <footer class="footer bg-light"> Footer </footer>
+
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
