--- a/templates/layout.html
+++ b/templates/layout.html
@@ -45,7 +45,7 @@
     </div>
     <!---->
 
-    <footer class="footer bg-light"> Footer </footer>
+    <footer class="footer bg-light mt-auto py-3 text-center"> info@nioscent.net </footer>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
